--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
+    <title>Welcome to COMP3900 and COMP9900</title>
 </head>
 <body>
     <h1>Welcome to COMP3900</h1>
